--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -184,7 +184,7 @@ Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can 
 
 *(In general, we'll want to adjust this section to parallel the figure and tie in with the section above.)*
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/Updated T_leaf_png.png)
 
 
 High wind speed (Fig. `r fig_NEON_vertical`) and large leaf $g_a$ decrease $T_{leaf}$ - $T_{air}$ [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a]. 
@@ -252,7 +252,7 @@ Exposed canopy leaves are better adapted to heat and water stress than shade lea
 #### Biochemical traits
 
 Biochemical protection against foliage light and heat damage increases with irradiance.
-Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is particularly important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. N and P are crucial for photosynthetic and metabolic processes along with $VAZ$, as they contribute to enzyme formation and function, such as in Rubisco. $N_{area}$ increases in the direction of new leaf growth, where it optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed canopies, making these species particularly advantageous [*REF*].
+Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. N and P are essential for photosynthetic and metabolic processes along with $VAZ$, as they contribute to enzyme formation and function, such as in Rubisco. $N_{area}$ increases in the direction of new leaf growth, where it optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed canopies, making these species particularly advantageous [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -310,13 +310,13 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
+In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species, measured near ground level, in Panama tropical forest, but results weren't significant. 
 
 Further, leaf thermal tolerances are more adapted to microenvironment than macroclimate [@feeley_thermal_2020; Slot et al. 2020]. Particularly, in an Australian arid region, *Acacia Papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
 
 *We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
-Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. @slotLeafHeatTolerance2020 found that $T_{crit}$ was greater among tropical species' large leaves with slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$)
+Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves that had greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$).
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
  
@@ -324,7 +324,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas Griffin et al. 2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008], although at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008], although at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] also showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
 
  
@@ -345,16 +345,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought is more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, @bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
+Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought is more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
-Tolerance to multiple biophysical and biological stressors can differ among tree size classes, which has shown to increase with tree height and light, and resultant non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to stress [@niinemetsResponsesForestTrees2010a]. Autotrophic respiration also increases with stand age that declines NPP, whereas GPP increases with associated morphological and anatomical complexity with age [PW West, 2019]. This difference can alter tree growth patterns in response to biophysical conditions. Particularly, higher temperatures has shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supresses growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
+Tolerance to multiple biophysical and biological stressors can differ among tree size classes, which has shown to increase with tree height and light, and resultant non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to multiple stressors [@niinemetsResponsesForestTrees2010a]. Autotrophic respiration also increases with stand age that declines NPP, whereas GPP increases with associated morphological and anatomical complexity with age [@IncreasingRespiratoryCosts]. These difference can alter tree growth patterns in response to biophysical conditions. Particularly, higher temperatures has shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supress growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
  It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
 
-Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
+Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, later in spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
 
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
@@ -387,18 +387,18 @@ The complex interactions of the biophysical environment and biological--leaf tra
 
 ### canopy disturbance
 
-Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [Pau et al. 2018], specifically in the tropics where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. 
+Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [@pauTropicalForestTemperature2018] in the tropics, where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. 
 [**to include Teskey 2015; Breashers et al. 2021**]
 
 Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
 ### warming
 
-Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [Keenan et al. 2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Pamela templer et al.].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress, with implications for forest structure [@parkwilliamsTemperaturePotentDriver2013].
+Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Templer et al.].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure.
 
-Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
+Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-In the face of global climate change, resiliency among forests also stand out, such as African rainforests [Amy Bennett's new paper] that are more resilient to warming and drought than other forests. Increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] are other mechanisms [for eg. *REF*] that will help forests cope with warming.
+In the face of global climate change, resiliency among forests also stand out, such as African rainforests, with canopy trees that are more resilient to warming and drought than other forests [@bennettResistanceAfricanTropical2021]. Increasing temperature acclimation among tropical, temperate and boreal species [@slotGeneralPatternsAcclimation2015;@slotPhotosyntheticPlasticityTropical2021; @wayJustRightTemperature2019; @cunninghamTemperateRainforestTrees2003] and recovery from canopy heat stress [@smithEmpiricalEvidenceResilience2020] are other mechanisms that will help forests cope with warming.
 
 These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
